--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.13.6
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   go_router: ^12.1.1
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
