--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^12.1.1
+  intl_phone_number_input: ^0.7.4
   provider: ^6.1.1
   shared_preferences: ^2.2.2
 
