--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^12.1.1
   intl_phone_number_input: ^0.7.4
   provider: ^6.1.1
+  rating_bar_custom: ^0.0.3
   shared_preferences: ^2.2.2
 
 dev_dependencies:
