--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
+  firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
   go_router: ^12.1.1
+  image_cropper: ^5.0.1
+  image_picker: ^1.0.7
+  intl: ^0.19.0
   intl_phone_number_input: ^0.7.4
   provider: ^6.1.1
   rating_bar_custom: ^0.0.3
