--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,14 @@ dependencies:
   firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   go_router: ^12.1.1
+  http: ^1.2.0
   image_cropper: ^5.0.1
   image_picker: ^1.0.7
   intl: ^0.19.0
   intl_phone_number_input: ^0.7.4
   provider: ^6.1.1
-  rating_bar_custom: ^0.0.3
   shared_preferences: ^2.2.2
 
 dev_dependencies:
