--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
+  geolocator: ^10.1.0
   go_router: ^12.1.1
+  google_maps_flutter: ^2.5.3
   http: ^1.2.0
   image_cropper: ^5.0.1
   image_picker: ^1.0.7
   intl: ^0.19.0
   intl_phone_number_input: ^0.7.4
+  permission_handler: ^11.2.0
   provider: ^6.1.1
   shared_preferences: ^2.2.2
 
@@ -57,9 +60,9 @@ dev_dependencies:
 flutter_launcher_icons:
   android: 'ic_launcher'
   ios: true
-  image_path: "assets/icon/app_icon.png"
+  image_path: "assets/icons/app_icon.png"
   adaptive_icon_background: "#3D238E"
-  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_foreground: "assets/icons/app_icon_foreground.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
@@ -75,7 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icon/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
