--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
+  flutter_polyline_points: ^2.0.0
   flutter_rating_bar: ^4.0.1
   geolocator: ^10.1.0
   go_router: ^12.1.1
