--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.19
   flutter_polyline_points: ^2.0.0
   flutter_rating_bar: ^4.0.1
   geolocator: ^10.1.0
@@ -65,6 +66,13 @@ flutter_launcher_icons:
   adaptive_icon_background: "#3D238E"
   adaptive_icon_foreground: "assets/icons/app_icon_foreground.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_native_splash:
+  color: "#3D238E"
+  android: true
+  ios: true
+  android_12:
+    color: "#3D238E"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
